io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegalexceptionhandler6/MyUncheckedException.java
package io.hotmoka.tests.errors.illegalexceptionhandler6;

public class MyUncheckedException extends RuntimeException {
	private static final long serialVersionUID = 1L;
}